# name: test_update[added]
  <class 'dict'> {
    'cancel_job': False,
    'create_ref': False,
    'create_sample': True,
    'modify_hmm': False,
    'modify_subtraction': True,
    'remove_file': False,
    'remove_job': False,
    'upload_file': False,
  }
---
# name: test_update[removed]
  <class 'dict'> {
    'cancel_job': False,
    'create_ref': False,
    'create_sample': False,
    'modify_hmm': False,
    'modify_subtraction': True,
    'remove_file': False,
    'remove_job': False,
    'upload_file': False,
  }
---
